# caf_tracing

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  TODO_LIST.txt  build.sh  format.sh  kill_server.sh  run_client.sh  run_server.sh
client/: CMakeLists.txt
client/include/: client_actor.hpp  shutdown.hpp
client/src/: client_actor.cpp  main.cpp  shutdown.cpp
cmake/: FindCAF.cmake
scripts/: build_caf.sh
server/: CMakeLists.txt
server/include/: participant.hpp  server_chat_actor.hpp
server/src/: main.cpp  participant.cpp  server_chat_actor.cpp
shared/: CMakeLists.txt
shared/include/: actor_profiler.hpp  actor_system_config.hpp  aprint.hpp  args.hpp  atoms.hpp  client_actor_type.hpp  create_span.hpp  create_tracer.hpp  error.cpp  error.hpp  extract.hpp  get_tracing_data.hpp  hostname.hpp  inject.hpp  ip_address.hpp  message.hpp  profiler.hpp  server_actor_type.hpp  setup_tracer.hpp  source_location.hpp  span_context.hpp  tracing_data.hpp  tracing_data_factory.hpp  tracing_sender.hpp  types.hpp
shared/include/traced/: reacts_to.hpp  replies_to.hpp
shared/include/tracer/: get.hpp  put.hpp
shared/src/: actor_profiler.cpp  actor_system_config.cpp  args.cpp  create_span.cpp  create_tracer.cpp  error.cpp  extract.cpp  hostname.cpp  inject.cpp  ip_address.cpp  profiler.cpp  setup_tracer.cpp  span_context.cpp  tracing_data.cpp  tracing_data_factory.cpp
shared/src/tracer/: get.cpp  put.cpp
